--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
 
 
@@ -58,10 +60,41 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
 
-</script>
+    const letters = [...document.querySelectorAll('kbd')];
+    const lettersArray = letters.map((x) => x.innerHTML);
 
+    const playAudio = (key) => {
+      const audio = document.querySelector(`audio[data-key="${key}"]`);
+      audio.currentTime = 0;
+      audio.play();
+    };
 
+    const removeTransition = (e) => {
+      if (e.propertyName !== 'transform') return;
+      e.target.classList.remove('playing');
+    };
+
+    const activateButton = (index) => {
+      const key = document.querySelector(`div[data-key="${index}"]`);
+
+      key.classList.add('playing');
+
+      const keys = Array.from(document.querySelectorAll('.key'));
+      keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+    };
+
+    document.addEventListener("keydown", (event) => {
+
+      if (lettersArray.includes(event.key.toUpperCase())) {
+        playAudio(event.keyCode);
+        activateButton(event.keyCode);
+      }
+
+    });
+
+  </script>
 </body>
+
 </html>
