--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
     </div>
+  </div>
 
 
   <style>
@@ -44,17 +46,18 @@
       position: relative;
       padding: 2rem;
       box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
+        0 0 0 4px rgba(0, 0, 0, 0.1),
         inset 0 0 0 3px #EFEFEF,
         inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+        0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-3px);
+      /* account for the height of the clock hands */
     }
 
     .hand {
@@ -63,13 +66,62 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.42, 0, 0, 2.26);
     }
-
   </style>
 
   <script>
 
 
+    // console.log(seconds, deg);
+    // 0 sec - 0 deg 
+    // 15 sec - 90 deg // 6
+    // 30 sec - 180 deg // 6
+    // 45 sec - 270 deg // 6
+    // 60 sec - 360 deg // 6
+
+    // 49 sec = 6 * 49 = 294
+
+    const setSeconds = (seconds) => {
+      const secondArrow = document.querySelector('.second-hand');
+      const deg = (seconds * 6) + 90;
+      secondArrow.style.transform = `rotate(${deg}deg)`;
+    };
+
+    const setMinutes = (minutes) => {
+      const secondArrow = document.querySelector('.min-hand');
+      const deg = (minutes * 6) + 90;
+      secondArrow.style.transform = `rotate(${deg}deg)`;
+    };
+
+    const setHours = (hours, minutes) => {
+
+      const secondArrow = document.querySelector('.hour-hand');
+      const deg = (((hours * 60) + minutes) / 2) + 90;
+      secondArrow.style.transform = `rotate(${deg}deg)`;
+
+      // 100% - 60 = 12 hours = 720 minutes = 360 deg
+      // 50% - 30 = 6 hours = 360 minutes = 180 deg
+      // 25% - 15 palochek - 3 hours = 180 minutes = 90 deg
+
+      // 10 hours + 20 minutes = 10 * 60 + 20 = 620 mintutes = 310 deg
+    };
+
+
+
+    setInterval(() => {
+      const time = new Date();
+
+      setSeconds(time.getSeconds());
+      setMinutes(time.getMinutes());
+      setHours(time.getHours(), time.getMinutes());
+
+    }, 1000);
+
   </script>
 </body>
+
 </html>
